Fixed intro not showing

--- a/intro.css
+++ b/intro.css
@@ -26,12 +26,12 @@ header h4{
 
 .intro{
 	position: fixed;
-	z-index: 1;
+	z-index: 100;
 	left: 0%;
 	top: 0%;
 	width: 100%;
 	height: 100vh;
-	background-color: #d6d6c5;
+	background-color: #ffffce;
 	transition: 1s;
 }
 
